@@ -10,7 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>framework-core</module>
-        <module>mConsole</module>
+        <!--<module>mConsole</module>-->
+        <!--<module>mRetail</module>-->
+        <module>mRetail-module</module>
     </modules>
 
 
@@ -30,7 +32,7 @@
         <dom4j.version>1.6.1</dom4j.version>
         <org.reflections.version>0.9.10</org.reflections.version>
         <org.apache.poi.version>3.14</org.apache.poi.version>
-        <jaxen.version>1.1.6</jaxen.version>
+        <jaxen.version>1.1.1</jaxen.version>
         <org.apache.pdfbox.version>2.0.1</org.apache.pdfbox.version>
         <firefox.xpi.version>1.2.3</firefox.xpi.version>
 
@@ -56,6 +58,7 @@
         <!--<artifactId>logback-classic</artifactId>-->
         <!--<version>${ch.qos.logback.classic.version}</version>-->
         <!--</dependency>-->
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -111,11 +114,11 @@
             <version>${com.google.code.gson.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${org.testng.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.testng</groupId>-->
+            <!--<artifactId>testng</artifactId>-->
+            <!--<version>${org.testng.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -171,11 +174,11 @@
             <version>1.4.01</version>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>jaxen</groupId>-->
-        <!--<artifactId>jaxen</artifactId>-->
-        <!--<version>${jaxen.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+        <groupId>jaxen</groupId>
+        <artifactId>jaxen</artifactId>
+        <version>${jaxen.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>net.lightbody.bmp</groupId>
@@ -207,11 +210,11 @@
         <!--<scope>test</scope>-->
         <!--</dependency>-->
 
-        <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-testng</artifactId>
-            <version>1.2.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>info.cukes</groupId>-->
+            <!--<artifactId>cucumber-testng</artifactId>-->
+            <!--<version>1.2.0</version>-->
+        <!--</dependency>-->
 
 
         <dependency>
@@ -240,6 +243,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>xml-path</artifactId>
             <version>3.0.0</version>
@@ -248,7 +257,7 @@
         <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
-            <version>2.1.0</version>
+            <version>3.3.0</version>
         </dependency>
 
         <dependency>
@@ -256,7 +265,6 @@
             <artifactId>ashot</artifactId>
             <version>1.5.2</version>
         </dependency>
-
 
     </dependencies>
 
@@ -282,6 +290,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.18.1</version>
                     <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         <testFailureIgnore>false</testFailureIgnore>
                         <argLine>
                             -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
